client/src/styles/sudoku.css
/* Global Tag Settings */

table {
  border-collapse: collapse;
}

body {
  background-color: #F2F2F2 !important;
}



/* Input Cell Animation */

.make-absolute {
  text-align: center;
  position: absolute;
  z-index: 2000;
}

.input-popover-enter {
  position: absolute;
  transform: scale(0);
  z-index: 2000;
}

.input-popover-enter.input-popover-enter-active {
  transform: scale(1);
  transition:  150ms ease-in;
}

.input-popover-leave {
  position: absolute;
  transform: scale(1);
  z-index: 2000;
}

.input-popover-leave.input-popover-leave-active {
  transform: scale(0);
  transition: 0ms ease-in;
}


/* cell value animation */

.span-value{
  position: relative;
  transform: scale(0);
  transition: 0.1s ease-in;
}

.span-value.show{
  transform: scale(.99)
}

/* Sudoku Grid */

.sudoku-grid {
  outline: solid 2.5px;
}

.cell {
  cursor: pointer;
  margin-top: -1px;
  margin-left: -1px;
  border-spacing: 0px;
  width: 60px;
  height: 60px;
  display: inline-block;
  text-align: center;
  border-top: 1px dashed;
  border-right: 1px dashed;
}

.sudoku-grid .cell:nth-child(n+3):nth-last-child(n+1){
  border-right: none;
}

.top-row .cell{
  border-top: none;
}

.header-text {
  text-align: center
}

.sudoku-grid .clicky:hover {
  background-color: #043d4b3a
}

div.span-value.clicky  span  {
  color: rgb(21, 152, 121);
}

.clue {
  background: #bfc8cb7b;
  cursor: not-allowed;
}



.boop {
  margin-top: 40px;
}

.sudoku-grid .cell span {
    color:#2c3e50;
    font-size:40px;
    text-align:middle;
}

/* hacky bootstrap-react fix */

.top-buffer {
  margin-top:20px;
}

.thicc {
  margin-bottom: 10px;
}




.input-cell:hover {
  color: rgb(21, 152, 121);
}

#input-popover tbody{
  width: 100%;
  display: table;
}

#input-popover td{
  cursor: pointer;
}


#input-popover {
  margin-left: -4px;
  margin-top: -4px;
  border-radius: 5px;
  box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
  transition: all 0.5s cubic-bezier(.25,.8,.25,1);
  background-color: #F2F2F2;
  position: absolute;
  font-weight: bold;
  font-size: 14px;
  width: 68px;
  height: 68px;
  table-layout: fixed;
  display: block;
  z-index: 2000;
}



.close-button {
  display: none!important;
  margin-left: 0px;
  z-index: 1000;
  position: absolute;
  display: block;
  font-size: .8em;
}

.cell:hover .close-button{
  display: block!important;
}

.content-box {
  padding: 20px;
  background-color: white;
  border-style: solid;
  border-color: transparent;
  border-width: 1px;
  border-radius: 5px;
}



.subtle-shadow {
    border-radius: 2px;
    box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
}

.bg-light {
  background-color: rgba(132, 136, 136, 0.187) !important;
}

/* PAGE WRAP SETTINGS */

#wrap {
  min-height: 100%;
}

#main {
  overflow:auto;
  padding-bottom:150px; /* this needs to be bigger than footer height*/
}

html {
  position: relative;
  min-height: 100%;
}
body {
  margin-bottom: 60px;
}
.footer-wrap {
  position: absolute;
  bottom: 0;
  width: 100%;
  height: 60px;
}


/* Homebrew Dropdown */

.dropdown {
    position: relative;
    display: inline-block;
}

/* Dropdown Content (Hidden by Default) */
.dropdown-content {
    display: none;
    position: absolute;
    background-color: #f9f9f9;
    min-width: 190px;
    box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
    z-index: 1;
}

/* Links inside the dropdown */
.dropdown-content a {
    color: black;
    padding: 12px 16px;
    text-decoration: none;
    display: block;
}

/* Change color of dropdown links on hover */
.dropdown-content a:hover {background-color: #f1f1f1}

/* Show the dropdown menu on hover */
.dropdown:hover .dropdown-content {
    display: block;
}

/* Change the background color of the dropdown button when the dropdown content is shown */
.dropdown:hover .dropbtn {
    background-color: #3e8e41;
}

